[tool.poetry]
name = "metricas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
radon = "^5.1.0"
scalene = "^1.5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
